test/corpus/field_access.test
================================================================================
simple field access
================================================================================
obj.field
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (field_access
      (identifier)
      (identifier))))

================================================================================
safe navigation field access
================================================================================
obj?.field
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (field_access
      (identifier)
      (identifier))))

================================================================================
spread operator field access
================================================================================
obj*.field
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (field_access
      (identifier)
      (identifier))))

================================================================================
chained field access
================================================================================
obj.field1.field2
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (field_access
      (field_access
        (identifier)
        (identifier))
      (identifier))))

================================================================================
mixed safe navigation and spread
================================================================================
obj?.field*.subfield
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (field_access
      (field_access
        (identifier)
        (identifier))
      (identifier))))

================================================================================
complex nested field access
================================================================================
obj.field?.subfield*.items
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (field_access
      (field_access
        (field_access
          (identifier)
          (identifier))
        (identifier))
      (identifier))))
