test/corpus/field_declarations.test
================================================================================
field without explicit type
================================================================================
class TestClass {
    @Field(value = "Current")
    current
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_declaration
        (modifiers
          (annotation
            name: (identifier)
            arguments: (annotation_argument_list
              (element_value_pair
                key: (identifier)
                value: (string_literal)))))
        declarator: (variable_declarator
          name: (identifier))))))

================================================================================
field with explicit type
================================================================================
class TestClass {
    @Field(value = "Max")
    int maxValue
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_declaration
        (modifiers
          (annotation
            name: (identifier)
            arguments: (annotation_argument_list
              (element_value_pair
                key: (identifier)
                value: (string_literal)))))
        type: (integral_type)
        declarator: (variable_declarator
          name: (identifier))))))

================================================================================
field with def type
================================================================================
class TestClass {
    def dynamicField = "value"
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_declaration
        declarator: (variable_declarator
          name: (identifier)
          value: (string_literal))))))

================================================================================
multiple fields with mixed types
================================================================================
class TestClass {
    String name
    age
    def value = 42
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_declaration
        type: (type_identifier)
        declarator: (variable_declarator
          name: (identifier)))
      (field_declaration
        declarator: (variable_declarator
          name: (identifier)))
      (field_declaration
        declarator: (variable_declarator
          name: (identifier)
          value: (decimal_integer_literal))))))

================================================================================
annotated fields with mixed types
================================================================================
class TestClass {
    @Field(value = "Current")
    current
    @Field(value = "Max")
    int max
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_declaration
        (modifiers
          (annotation
            name: (identifier)
            arguments: (annotation_argument_list
              (element_value_pair
                key: (identifier)
                value: (string_literal)))))
        declarator: (variable_declarator
          name: (identifier)))
      (field_declaration
        (modifiers
          (annotation
            name: (identifier)
            arguments: (annotation_argument_list
              (element_value_pair
                key: (identifier)
                value: (string_literal)))))
        type: (integral_type)
        declarator: (variable_declarator
          name: (identifier))))))
================================================================================
field with cast expression and automatic semicolon
================================================================================
class TestClass {
    private Function<String, Integer> converter = { str -> Integer.parseInt(str) } as Function<String, Integer>
    
    @Override
    List<SomeType> getData(String param) {
        return null
    }
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_declaration
        (modifiers)
        type: (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier)
            (type_identifier)))
        declarator: (variable_declarator
          name: (identifier)
          value: (cast_expression
            value: (closure
              (identifier)
              (expression_statement
                (method_invocation
                  object: (identifier)
                  name: (identifier)
                  arguments: (argument_list
                    (identifier)))))
            type: (generic_type
              (type_identifier)
              (type_arguments
                (type_identifier)
                (type_identifier))))))
      (method_declaration
        (modifiers
          (marker_annotation
            name: (identifier)))
        type: (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier)))
        name: (identifier)
        parameters: (formal_parameters
          (formal_parameter
            type: (type_identifier)
            name: (identifier)))
        body: (block
          (return_statement
            (null_literal)))))))

================================================================================
field with initializer and automatic semicolon
================================================================================
class TestClass {
    private String field1 = "value1"
    private String field2 = "value2"
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_declaration
        (modifiers)
        type: (type_identifier)
        declarator: (variable_declarator
          name: (identifier)
          value: (string_literal)))
      (field_declaration
        (modifiers)
        type: (type_identifier)
        declarator: (variable_declarator
          name: (identifier)
          value: (string_literal))))))
