test/corpus/floating_point_literals.test
================================================================================
floating point with digits after decimal
================================================================================
3.14
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (decimal_floating_point_literal)))

================================================================================
floating point with type suffix
================================================================================
1.5f
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (decimal_floating_point_literal)))

================================================================================
floating point with scientific notation
================================================================================
1.5e10
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (decimal_floating_point_literal)))

================================================================================
floating point starting with decimal
================================================================================
.5
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (decimal_floating_point_literal)))

================================================================================
floating point with explicit type and no fractional digits
================================================================================
1.f
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (decimal_floating_point_literal)))

================================================================================
scientific notation without fractional part
================================================================================
1.e5
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (decimal_floating_point_literal)))
